eirini-persi/base/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/instance: eirini-ext
    app.kubernetes.io/name: eirini-ext
  name: eirini-ext
spec:
  serviceAccountName: eirini-ext-volume-services
  automountServiceAccountToken: true
  containers:
  - image: cfpersi/eirini-ext
    imagePullPolicy: Always
    name: eirini-ext
    ports:
    - containerPort: 443
      name: http
      protocol: TCP
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
