eirini-persi/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: eirini-ext-svc
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app.kubernetes.io/instance: eirini-ext
    app.kubernetes.io/name: eirini-ext
